# sourcewise-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_documents_created_at_index.py  0003_add_question_history_indexes.py
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/docs/: embedding-benchmark.md
backend/tests/: test_api_routing.py  test_auth_dependencies.py  test_auth_login_api.py  test_auth_models.py  test_auth_password_reset_api.py  test_auth_register_api.py  test_auth_verification_api.py  test_chunk_similarity_search.py  test_chunking.py  test_citation_snapshots.py  test_collection_models.py  test_collection_repository.py  test_collection_schemas.py  test_collections_api.py  test_content_ownership_models.py  test_document_models.py  test_documents_api.py  test_documents_list.py  test_email.py  test_files.py  test_ingestion_worker.py  test_integration_smoke.py  test_llm.py  test_logging.py  test_ollama_client.py  (+10 more)
demo/: sample.md  sample.txt
frontend/: .env.example  Dockerfile  next-env.d.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
scripts/: demo.sh
secrets/: README.md
tests/: conftest.py  test_chunking.py  test_documents_api.py  test_documents_list.py  test_files.py  test_integration_smoke.py  test_llm.py  test_ollama_client.py  test_question_answering.py  test_questions_api.py  test_repositories.py  test_settings.py
(+133 files in other folders)
