[project]
name = "sourcewise"
version = "0.1.0"
description = "Sourcewise API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.38",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "openai>=1.68.2",
    "pypdf>=5.4.0",
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "testcontainers>=4.13.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
